test/programs/error-def-is-symbol.defs
(def I_am_okay because_I_am_a_definition)
I_am_a_symbol_not_a_definition